Keep screen turned on tuner activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.filipetrovic.auxilium.MainActivity">
+    tools:context="com.filipetrovic.auxilium.MainActivity"
+    android:keepScreenOn="true">
 
     <fragment
         android:id="@+id/fragment_tuner_view"
